# python-for-data-analysis

./: .gitignore  environment_setup.md  import_convention.py  mydata.sqlite  pyproject.toml
