[project]
name = "python-for-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "html5lib>=1.1",
    "ipython>=9.15.0",
    "jupyterlab>=4.6.0",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas[performance]>=3.0.4",
    "patsy>=1.0.2",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "statsmodels>=0.14.6",
    "tables>=3.11.1",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
